1. Android中Loader相关内容的整理 2. 数据结构与算法中链接错误 3. 添加ubuntu中u盘、sd卡热插拔的支持

--- a/_posts/android/api_guide/tasks/2014-06-25-Loader.md
+++ b/_posts/android/api_guide/tasks/2014-06-25-Loader.md
@@ -45,7 +45,7 @@ date: 2014-06-25 09:11
 
 下面通过一则示例演示Fragment中执行异步加载的完整流程！该示例中，会在FragmentActivity中采用异步加载的方式查找并显示数据库中所有的图片的相关信息。
 
-点击查看：[Loader示例的完整源码](TODO)
+点击查看：[Loader示例的完整源码](https://github.com/wangkuiwu/android_applets/tree/master/api_guide/app_components/loader/loader_picture/LoaderTest)
 
 ## 1. 获取LoaderManager，并执行initLoader()
 
@@ -376,7 +376,7 @@ LoaderManager.java中的内部类LoaderInfo的源码如下：
 
 ### 1.6 LoadTask
 
-LoadTask是AsyncTaskLoader的内部类。实际上，它是AsyncTask的子类。在[介绍AsyncTask的文章中](TODO)，我们知道executeOnExecutor()会将任务提交到线程池中去执行，而这个被提交到线程池的任务会执行AsyncTask的doInBackground()。
+LoadTask是AsyncTaskLoader的内部类。实际上，它是AsyncTask的子类。在[介绍AsyncTask的文章中][link_android_async_task]，我们知道executeOnExecutor()会将任务提交到线程池中去执行，而这个被提交到线程池的任务会执行AsyncTask的doInBackground()。
 
     // AsyncTaskLoader.java中
     final class LoadTask extends AsyncTask<Void, Void, D> implements Runnable {
@@ -740,3 +740,5 @@ Loader自动更新数据是通过ContentObserver来实现的。
 说明：ForceLoadContentObserver是Loader.java的内部类，它继承于ContentObserver。当数据发生变化时，它会回调onChange()，进而调用onContentChanged()。而onContentChanged()则会执行forceLoad()。forceLoad()在前面已经介绍过了，它会启动AsyncTask被执行query查询操作！
 
 至此，几个问题都回答完了。Loader, AsyncTaskLoader, CursorLoader和LoaderManager的相互关系也整理完了！谢谢观赏！
+
+[link_android_async_task]:   /2014/06/25/AsyncTask
