--- a/_posts/datastructs/algrithm/sort/2013-05-06-heap-sort.md
+++ b/_posts/datastructs/algrithm/sort/2013-05-06-heap-sort.md
@@ -17,7 +17,7 @@ date: 2013-05-06 10:35
 
 堆排序(Heap Sort)是指利用堆这种数据结构所设计的一种排序算法。
 
-因此，学习堆排序之前，有必要了解堆！若读者不熟悉堆，建议先学习"TODO[二叉堆][link_erchadui]"，然后再来学习本章。
+因此，学习堆排序之前，有必要了解堆！若读者不熟悉堆，建议先学习"[二叉堆][link_ds_heap_binary_c]"，然后再来学习本章。
 
 我们知道，堆分为"最大堆"和"最小堆"。最大堆通常被用来进行"升序"排序，而最小堆通常被用来进行"降序"排序。
 鉴于最大堆和最小堆是对称关系，理解其中一种即可。本文将对最大堆实现的升序排序进行详细说明。
@@ -206,7 +206,7 @@ maxheap_down(a, start, end)是最大堆的向下调整算法。
 3. [堆排序Java实现][link_heapsort_java] (HeapSort.java)
 
 
-[link_erchadui]: 
+[link_ds_heap_binary_c]:        /2013/03/01/binary-heap-c
 [link_heapsort_c]: https://github.com/wangkuiwu/datastructs_and_algorithm/blob/master/source/algrightm/sort/heap_sort/c/heap_sort.c
 [link_heapsort_cplus]: https://github.com/wangkuiwu/datastructs_and_algorithm/blob/master/source/algrightm/sort/heap_sort/cplus/HeapSort.cpp
 [link_heapsort_java]: https://github.com/wangkuiwu/datastructs_and_algorithm/blob/master/source/algrightm/sort/heap_sort/java/HeapSort.java
