--- a/_posts/linux/ubuntu/2011-07-04-ubuntu-07-cmd.md
+++ b/_posts/linux/ubuntu/2011-07-04-ubuntu-07-cmd.md
@@ -8,6 +8,10 @@ date: 2011-07-04 09:07
 ---
 
 
+
+<a name="anchor1"></a>
+# 1. 基本网络指令
+
 **(01) 查看已经挂载的磁盘**
 
     $ mount
@@ -62,3 +66,41 @@ t -- 修改分区类型
 l -- 显示支持的分区类型  
 q -- 退出fdisk  
 
+
+<a name="anchor2"></a>
+# 2. 自动挂载u盘
+
+
+**第1步** 编辑/etc/udev/rules.d/10_usbkey.rules，内容如下：
+
+    KERNEL=="mmcblk0p[1-9]",SUBSYSTEM=="block",RUN+="/sbin/usbmount.sh %k"
+    KERNEL=="sd[a-z][0-9]",SUBSYSTEM=="block",RUN+="/sbin/usbmount.sh %k"
+
+**第2步** 编辑/sbin/usbmount.sh，内容如下：
+
+    #!/bin/bash
+
+    len=${#1}
+    # eg. sdc
+    if [ $len == 3 ]; then
+    exit
+    fi
+    # eg. scd1
+
+
+    if [ $ACTION == "add" ]; then
+    mkdir "/media/usb$1" -p
+    mount -t auto -o rw,umask=000 "/dev/$1" "/media/usb$1"
+    fi
+
+
+    if [ $ACTION == "remove" ]; then
+    umount "/media/usb$1"
+    rmdir "/media/usb$1"
+    fi
+
+**第3步** 修改/sbin/usbmount.sh权限
+
+    $ sudo chmod a+x /sbin/usbmount.sh
+
+重启即可自动挂载
