1. web基础之HTML总结. 2. web基础之CSS总结(未完成) 3. Android HttpClient总结(未完成) 4. Ubuntu中安装软件

--- a/_posts/linux/blog/2011-12-01-jekyll-01.md
+++ b/_posts/linux/blog/2011-12-01-jekyll-01.md
@@ -16,6 +16,7 @@ date: 2011-12-01 09:01
     $ sudo apt-get install ruby
     $ sudo apt-get install ruby1.9.1-dev
     $ sudo apt-get install rubygems
+    $ sudo apt-get install nodejs
  
 **更改gem源**
 
