1. ubuntu中配置tomcat的方法。 2. ubuntu中配置Jenkins的方法。 3. Jenkins持续构建Android工程的方法。

--- a/_drafts/tools/jenkins/2015-08-07-jenkins-02.md
+++ b/_drafts/tools/jenkins/2015-08-07-jenkins-02.md
@@ -1,13 +1,13 @@
 ---
 layout: post
-title: "Jenkins工具(二)之 Jenkins配置android工程"
-description: ""
+title: "Jenkins工具(二)之 Jenkins集成android工程"
+description: "jenkins"
 category: jenkins
 tags: [jenkins]
 date: 2015-08-07 09:02
 ---
 
-> 本文介绍Jenkins下集成工程的方法
+> 本文演示Jenkins+Android+Gradle+Git的协同工作方法。主要介绍Jenkins如何对android工程进行持续集成，该android工程是通过gradle工具进行构建，并通过git进行版本控制。
 
 > **目录**  
 [1. 下载插件](#anchor1)  
@@ -17,17 +17,28 @@ date: 2015-08-07 09:02
 <a name="anchor1"></a>
 # 1. 下载插件
 
-打开Jenkins之后，进入"Manage Jenkins" --> "Manage Plugins"下载插件。主要下载的插件是git和github插件。
+这里需要下载的插件有git, github和gradle插件。下载方法如下。
+
+第1步：点击"Manage Jenkins" -- "Manage Plugins"，进入到插件管理界面。如下图所示。
+
+![img](/media/pic/tools/jenkins/j2_01.jpg)
+
+说明：  
+(1) **Update**表示可更新的插件，**Available**表示可下载的插件，**Installed**表示已下载安装的插件，**Advanced**表示高级设置选项。  
+(2) 点击"Available"进入可下载的插件界面；然后，在"Filter"中输入"git"或"gradle"，查找相应的插件；然后勾选找到的插件；最后，点击"Install without restart"安装选中的插件。
 
 
 <a name="anchor2"></a>
 # 2. 配置工程
 
-本文假设github上已有android工程，路径是：https://github.com/wangkuiwu/jenkins_demo1.git
+这里介绍如何配置android工程。在配置工程之前，你得有工程。  
+本文以github上[android演示工程](https://github.com/wangkuiwu/jenkins-android-demo.git)来进行讲解。
 
-第1步：新建工程。
+第1步：在Jenkins中新建工程。
 
-选择"New Item"，然后输入Item name之后，选择"Freestyle project"。然后，点击"OK"新建工程。
+选择"New Item"，然后输入Item name之后，选择"Freestyle project"。然后，点击"OK"新建工程。如下图所示。
+
+![img](/media/pic/tools/jenkins/j2_02.jpg)
 
 第2步：配置工程。
 
@@ -36,36 +47,103 @@ date: 2015-08-07 09:02
 **配置一：工程路径**
 
 > 点击"Advanced Project Options"，勾选"Use custom workspace"进行自定义路径。  
-> 接着，在"Directory"中输入自定义的工程路径，例如/home/skywang/Documents/test  
-> 在"Display Name"中输入自定义的工程显示名，例如 test
+> 接着，在"Directory"中输入自定义的工程路径，例如: /home/skywang/Documents/jenkins/projects
+> 在"Display Name"中输入自定义的工程显示名，例如: TestProject
+
+![img](/media/pic/tools/jenkins/j2_03.jpg)
 
 **配置二：版本管理工具**
 
 > 点击"Source Code Management"，选择git进行版本控制。  
-> 接着，在"Repository URL"中输入git仓库的地址。例如，本例的android工程的仓库地址是：https://github.com/wangkuiwu/jenkins_demo1.git  
-> 然后，添加"Credentials"(证书)。可以提供密钥或者用户名/密码。
+> 接着，在"Repository URL"中输入git仓库的地址。例如，本例的android工程的仓库地址是：https://github.com/wangkuiwu/jenkins-android-demo.git  
+
+![img](/media/pic/tools/jenkins/j2_04.jpg)
+
+> 然后，点击"Credentials"右边的"Add"，添加认证方式。打开如下认证方式对话框。
+
+![img](/media/pic/tools/jenkins/j2_05.jpg)
+
+> 在认证方式对话框的"Kind"栏中选择"Username with password"，即选择用户名/密码的方式进行认证。  
+> 接着，输入用户名和密码。
+> 点击"Add"，添加该认证方式。返回到配置界面。
+
+![img](/media/pic/tools/jenkins/j2_06.jpg)
+
+> 点击"Credentials"栏的下拉框，选择刚刚添加的认证方式。
 
 **配置三：构建触发器**
 
-> 点击"Build Triggers"，勾选"Build when a change is pushed to GitHub"。即，当有代码提交到git仓库时，就Jenkins就会自动进行编译。
+> 点击"Build Triggers"，勾选"Poll SCM"。输入"H  10  *  *  2"，这意味着"每周二的上午10:00"，Jenkins会自动获取服务器上最新的代码，并进行打包验证。
 
-**配置四：添加配置任务**
+![img](/media/pic/tools/jenkins/j2_07.jpg)
 
-> 点击"Build" 下的 "Add Build setup"，选择"Invoke Gradle script"。  
-> 接着，在"Tasks"中输入"clean build"
+**配置四：设置构建工具**
 
-若你需要，还可以进行其他的配置；上面只是列出了几个比较重要、常用的配置。
+> 点击"Build" 下的 "Add build setup"，选择"Invoke Gradle script"。  
+> 在"Tasks"中输入"clean build"。即表示构建时，会执行命令"gradle clean build"。
 
+![img](/media/pic/tools/jenkins/j2_08.jpg)
 
-第3步：运行工程
+**配置五：添加构成完成后的任务**
 
-保存之后，点击任务中的"build Now"会克隆并编译工程。工程的输出路径就是前面自定义的"工程路径"。
+> 点击"Add post-build setup"，设置构建完成后自动执行的任务。这里选择"E-mail Notification"，即构建完成之后自动发送邮寄通知。
 
+![img](/media/pic/tools/jenkins/j2_09.jpg)
+
+上面只是列出了几个比较重要、常用的配置；你可以根据自己的需求进行其他定制。
 
 
 
 <a name="anchor3"></a>
-# 3. 参考链接
+# 3. 构建工程
+
+前面我们创建了TestProject工程，并且设置"每周二 10:00"会自动从github上下载该工程并进行构建。
+
+这里，我们介绍手动构建的方法。
+
+第1步：开始构建
+
+返回到Jenkins的Dashboard(即首页)，然后点击"TestProject"名称右边的下拉图标弹出对话框，选择对话框中的"Build Now"开始构建。
+
+![img](/media/pic/tools/jenkins/j2_10.jpg)
+
+第2步：跟踪构建进度
+
+在"Build Executor Status"栏可以查阅构建进度。
+
+![img](/media/pic/tools/jenkins/j2_11.jpg)
+
+
+第3步：查看构建结果
+
+构建完成之后，按F5刷新页面。此时，TestProject工程的状态图标会由之前的"灰色"变成"蓝色"。
+
+![img](/media/pic/tools/jenkins/j2_12.jpg)
+
+点击"TestProject"进入到工程，可以看到TestProject的工程内容。如下图
+
+![img](/media/pic/tools/jenkins/j2_13.jpg)
+
+
+第4步：查看输出内容
+
+进入到"Workspcae"，可以找到工程的输出apk和单元测试报告。
+
+例如，本工程的输出apk路径是：app/build/outputs/apk/app-debug.apk。进入Workspcae中对应的路径就可以看到该apk文件。
+
+![img](/media/pic/tools/jenkins/j2_14.jpg)
+
+例如，本工程的单元测试报告文件是：javaLib/build/reports/tests/index.html。
+
+![img](/media/pic/tools/jenkins/j2_15.jpg)
+
+点击index.html打开单元测试报告。
+
+![img](/media/pic/tools/jenkins/j2_16.jpg)
+
+
+<a name="anchor3"></a>
+# 4. 参考链接
 
 1. [Jenkins官网](http://jenkins-ci.org/)
 2. [基于Jenkins+git+gradle的android持续集成](http://blog.csdn.net/voiceofnet/article/details/45197883)
