--- a/_drafts/tools/nexus/2015-07-24-nexus-03.md
+++ b/_drafts/tools/nexus/2015-07-24-nexus-03.md
@@ -10,24 +10,35 @@ date: 2015-07-24 09:03
 > 本文介绍通过maven内部服务器共享android库，即共享aar包的方法。
 
 > **目录**  
-[1. 创建本地仓库](#anchor1)  
-[2. 共享的android库到本地仓库](#anchor2)  
-[3. 使用本地仓库中被共享的android库](#anchor3)  
+[1. android本地仓库说明](#anchor1)  
+[2. 创建本地仓库](#anchor2)  
+[3. 共享android公共库](#anchor3)  
+[4. 引用android公共库](#anchor4)  
 
 
 <a name="anchor1"></a>
-# 1. 创建本地仓库
+# 1. android本地仓库说明
+
+本文将介绍如何将(通过gradle构建的)android公共库通过nexus共享到服务器上，然后其他客户端就可以轻松的引用到该android公共库。   
+
+涉及到的内容可以分为三个部分：
+第一部分：创建本地仓库。即，在nexus创建仓库。  
+第二部分：共享android公共库。即，将android公共库共享到nexus本地仓库中。  
+第三部分：引用android公共库。即，使用"共享到nexus本地仓库中的android公共库"。  
+
+<a name="anchor2"></a>
+# 2. 创建本地仓库
 
 下面介绍在nexus中创建本地仓库的方法。
 
-### 第1步 新建Hosted Repository
+**第1步 新建Hosted Repository**
 
 在Repositories中点击"Add"，选择"Hosted Repository"。 如下图所示
 
 ![img](/media/pic/tools/nexus/m3_01.jpg)
 
 
-### 第2步 编辑"新建的Hosted Repository"
+**第2步 编辑"新建的Hosted Repository"**
 
 选择新建的"Hosted Repository"，此时它的名称是"New Hosted Repository"。选择它，然后点击"Configuration"。在Configuration中，只需要进行以下几项设置；
 
@@ -41,7 +52,8 @@ date: 2015-07-24 09:03
 
 ![img](/media/pic/tools/nexus/m3_02.jpg)
 
-### 第3步 查看"新建的Hosted Repository"
+
+**第3步 查看"新建的Hosted Repository"**
 
 点击"Save"之后，新建的"Hosted Repository"的名称就变成上面设置的"Repository ID的值"。点击该仓库，此时该仓库有"Repository Path"和"Default Local Storage Location"等值。
 
@@ -49,24 +61,20 @@ date: 2015-07-24 09:03
 
 
 
-<a name="anchor2"></a>
-# 2. 共享的android库到本地仓库
+<a name="anchor3"></a>
+# 3. 共享android公共库
 
-下面介绍共享android库到仓库中的步骤。
+下面介绍如何"将android公共库共享到nexus本地仓库中"。
 
-## 2.1 完整的android库示例
-
-点击查看[android共享库的源码](https://github.com/wangkuiwu/maven_nexus_demo/tree/master/android/basic_library/WheelViewLibrary)，这份源码也是本文的示例源码。
+前面已经创建好了WheelView本地仓库，下面介绍如何将WheelView公共库到本地仓库。本地使用的WheelView公共库已共享到github上，点击查看[android共享库的源码](https://github.com/wangkuiwu/maven_nexus_demo/tree/master/android/wheelview_library/lib)，这份源码也是本文的示例源码。
 
 
 <br/ >
-## 2.2 自定义的android共享库
+下面介绍"对于用户已有的android库"如何修改，从而使它能被共享到nexus本地仓库。这里仅仅介绍通过gradle自动构建的android库，对于通过ant或者maven构建的工程，这里不予介绍。
 
-若要将已有的android库通过nexus进行共享，可以通过以下步骤实现。
+**第1步 编辑android库的build.gradle**
 
-### 第1步 编辑android库的build.gradle
-
-在已经能库的build.gradle中添加以下内容：
+编译android公共库的build.gradle，添加以下内容：
 
     apply plugin: 'maven' 
 
@@ -116,9 +124,9 @@ date: 2015-07-24 09:03
 说明：直接将该内容添加到build.gradle的末尾即可，不需要对上面的内容进行额外的修改！
 
 
-### 第2步 编辑gradle.properties
+**第2步 编辑gradle.properties**
 
-编辑andriod库中的gradle.properties，添加以下内容。如果没有gradle.properties，则新建该文件。
+编辑andriod公共库中的gradle.properties，添加以下内容。如果没有gradle.properties，则新建该文件。
 
     ## GROUP的值是自定义的。它表示群组；若要将该库发布的maven中，则它是库在maven中的groupId值。
     GROUP=cn.skw.widget
@@ -147,20 +155,24 @@ date: 2015-07-24 09:03
 (7) **NEXUS_PASSWORD**: 它必须是nexus的密码。  
 
 
-### 第3步 共享android库
+**第3步 共享android库**
 
 在android库下面运行`gradle uploadArchives`来共享库到nexus中。该指令正常运行的界面如下所示。
 
 ![img](/media/pic/tools/nexus/m3_04.jpg)
 
 
-再会到nexus中，点击仓库的"Browse Storage"，会发现里面有aar文件。
+再回到nexus中，点击仓库的"Browse Storage"，会发现里面有aar文件。
 
 ![img](/media/pic/tools/nexus/m3_05.jpg)
 
+这表示android公共库已被共享到nexus中！
 
-<a name="anchor3"></a>
-# 3. 使用本地仓库中被共享的android库
+
+<a name="anchor4"></a>
+# 4. 引用android公共库
+
+下面介绍在其他的android工程中引用"上面共享到nexus中android公共库"的方法。
 
 使用nexus中的android库，只需要在build.gradle中添加以下内容即可。
 
@@ -176,6 +188,6 @@ date: 2015-07-24 09:03
         compile 'cn.skw.widget:SelfWheelView:1.0@aar'
     }
 
-点击查看[使用android共享库的示例的源码](https://github.com/wangkuiwu/maven_nexus_demo/tree/master/android/basic_library/WheelViewLibrary_demo)。
+点击查看[使用android共享库的示例的源码](https://github.com/wangkuiwu/maven_nexus_demo/tree/master/android/wheelview_library/libNexusTest)。
 
 
